--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,29 @@
-langchain_groq
+# Core LangChain packages
+langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.0.10
+langchain-groq>=0.0.1
+langchain-huggingface>=0.0.1
+
+# Vector store and embeddings
+chromadb>=0.4.22
+sentence-transformers>=2.2.2
+
+# PDF Processing
+pypdf>=3.17.1
+
+# Text processing
+tiktoken>=0.5.2
+
+# Web search
+tavily-python>=0.3.1
+
+# Visualization and notebooks
+ipython>=8.12.0
+
+# Environment and utilities
+python-dotenv>=1.0.0
+langgraph>=0.0.1
+
+# Optional but recommended
+numpy>=1.24.0
